# kg_homework

./: .gitignore  README.md  _inspect.py  _inspect_report.txt  aftcln.txt  ans.py  app_streamlit.py  evaluate_kg.py  knowledge_graph.csv  main.py  new.py  pipeline_test.py  pyproject.toml  run_all.py  run_extract.py  schema.py
.cursor/: mcp.json
app_qa/: __init__.py  answer_builder.py  app.py  corpus_index.py  kg_store.py  llm_client.py  query_parser.py  retriever.py
data/: aliases.json  entities_by_type.json  entities_to_add_ch4.json  entities_to_add_llm.json  entities_to_add_llm_audited.json
docs/: ALGORITHM_DETAILS.md  EXPERIMENT_REPORT.md  NER_DETAILS.md  QA_APP_DETAILS.md
extractors/: __init__.py  dependency_re.py  llm_enhancer.py  ner.py  numeric_extractor.py  pattern_extractor.py  pipeline.py  preprocess.py  relation_normalizer.py  schema.py  svo_extractor.py  trigger_extractor.py  type_extractor.py
gold/: README_SILVER.txt  README_gold_ch4.md  gold_entities.csv  gold_triples.original.csv  gold_triples_aligned.csv  gold_triples_augmented.csv  gold_triples_llm.csv  silver_entities.txt  silver_triples.csv  silver_triples_loose.csv
output/: _llm_gold_cache.json  entities.csv  error_analysis_ch4.md  eval_ab_no_dep.txt  eval_ab_with_dep.txt  eval_fn.csv  eval_fp.csv  eval_report.txt  eval_report_ch4.txt  eval_report_ch4_aligned.txt  eval_report_ch4_augmented.txt  eval_report_ch4_current.txt  eval_report_ch4_g.txt  eval_report_ch4_no_instanceof.txt  eval_report_ch4_partial.txt  eval_report_ch4_v2_tight.txt  eval_report_llm_gold.txt  eval_report_loose.txt  (+10 more)
(+22 files in other folders)
